<resources>
    <string name="app_name">make-eat-easy</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="add_action_navigation">Add action</string>
    <string name="edit_template_navigation">Edit template</string>
    <string name="shopping_list_navigation">Shopping list</string>
    <string name="dishes_navigation">Dishes</string>
    <string name="foodstuffs_navigation">Foodstuffs</string>

    <string name="home_second">Home Second</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
