<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/add_action_navigation"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="@string/add_action_navigation" />
        <item
            android:id="@+id/edit_template_navigation"
            android:icon="@drawable/edit_border"
            android:title="@string/edit_template_navigation" />
        <item
            android:id="@+id/shopping_list_navigation"
            android:icon="@drawable/ic_list"
            android:title="@string/shopping_list_navigation" />
        <item
            android:id="@+id/dishes"
            android:icon="@drawable/ic_dishes"
            android:title="@string/dishes_navigation" />
        <item
            android:id="@+id/products"
            android:icon="@drawable/ic_products"
            android:title="@string/foodstuffs_navigation" />
    </group>
</menu>

